--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"dependencies": {
 		"@motionone/svelte": "^10.16.4",
 		"@sveltejs/adapter-static": "^3.0.1",
+		"@vercel/analytics": "^1.3.1",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
 		"js-confetti": "^0.12.0",
