--- a/package.json
+++ b/package.json
@@ -42,12 +42,16 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@ffmpeg/ffmpeg": "^0.12.10",
+		"@ffmpeg/util": "^0.12.1",
 		"@motionone/svelte": "^10.16.4",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@vercel/analytics": "^1.3.1",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
+		"ffmpeg": "^0.0.4",
 		"js-confetti": "^0.12.0",
+		"jszip": "^3.10.1",
 		"mode-watcher": "^0.3.0",
 		"pocketbase": "^0.21.3",
 		"svelte-confetti": "^2.0.1",
